# avex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  avex.cpp
projects/: CMakeLists.txt
projects/system/: CMakeLists.txt  scratch.scd  startup.scd  system.cpp
projects/testOne/: CMakeLists.txt  testOne.cpp
projects/testTwo/: CMakeLists.txt  testTwo.cpp
projects/triangle/: CMakeLists.txt  cherno-triangle.cpp  logl-triangle.cpp  triangle.cpp
shared/shaders/: basic.shader
testOne/: CMakeLists.txt  testOne.cpp
testTwo/: CMakeLists.txt  testTwo.cpp
tests/: CMakeLists.txt
